// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing modal should render cofirm password modal with expected contents and pass them the expected props 1`] = `
Array [
  <div
    className="[object Object] css-0"
  />,
  <div
    className="css-5grkxp"
  >
    <div
      className="css-qlehve"
      data-test-id="closeBtn"
    >
      <i>
        Icon not found
      </i>
    </div>
    <div>
      <div
        className={
          Object {
            "margin": "5 -2 5 -2",
            "padding": "0 2",
          }
        }
      >
        <p />
      </div>
      <div
        className={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "3rem",
            "margin": "-4",
            "marginTop": "2",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`testing modal should render modal 1`] = `
Array [
  <div
    className="[object Object] css-0"
  />,
  <div
    className="css-5grkxp"
  >
    <div
      className="css-qlehve"
      data-test-id="closeBtn"
    >
      <i>
        Icon not found
      </i>
    </div>
    <p
      className="css-18poma1"
      data-test-id="emptyMsg"
    >
      Modal is empty, not configured!
    </p>
  </div>,
]
`;
